--- a/MainActivity/app/src/main/res/layout/activity_login.xml
+++ b/MainActivity/app/src/main/res/layout/activity_login.xml
@@ -86,7 +86,8 @@
                 android:background="@color/design_default_color_primary_dark"
                 android:text="로그인"
                 android:layout_marginTop="10dp"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:id="@+id/loginButton"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
