speechList xml code upload

--- a/MainActivity/app/src/main/res/values/arrays.xml
+++ b/MainActivity/app/src/main/res/values/arrays.xml
@@ -5,4 +5,14 @@
         <item>맥데</item>
         <item>없음</item>
     </string-array>
+    <string-array name="year">
+        <item>2020</item>
+        <item>2021</item>
+        <item>전체</item>
+    </string-array>
+    <string-array name="era">
+        <item>구약</item>
+        <item>신약</item>
+        <item>전체</item>
+    </string-array>
 </resources>
