--- a/MainActivity/app/src/main/res/layout/fragment_ride.xml
+++ b/MainActivity/app/src/main/res/layout/fragment_ride.xml
@@ -1,14 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RideFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="라이드" />
+        android:layout_marginTop="20dp"
+        android:orientation="vertical">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/design_default_color_primary">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="라이드"
+                android:textColor="#ffffff"
+                android:textSize="30dp"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"/>
+
+        </LinearLayout>
+
+         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="50dp"
+                android:layout_gravity="center">
+            <Button
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:hint="라이드 신청"
+                android:layout_gravity="center"
+                android:padding="10dp"
+                android:textColor="#ffffff"
+                android:textColorHint="#ffffff"
+                android:id="@+id/requestRide"
+                android:layout_marginRight="10dp"
+                android:background="@color/design_default_color_primary"/>
+
+            </LinearLayout>
+            <Button
+                android:inputType="textPassword"
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:hint="라이드 취소"
+                android:layout_gravity="center"
+                android:padding="10dp"
+                android:textColor="#ffffff"
+                android:textColorHint="#ffffff"
+                android:id="@+id/requestCancelRide"
+                android:layout_marginTop="10dp"
+                android:background="@color/design_default_color_primary"/>
+            <Button
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:hint="라이더 등록"
+                android:layout_gravity="center"
+                android:padding="10dp"
+                android:textColor="#ffffff"
+                android:textColorHint="#ffffff"
+                android:id="@+id/registerRider"
+                android:layout_marginTop="10dp"
+                android:background="@color/design_default_color_primary"/>
+             <Button
+                 android:layout_width="280dp"
+                 android:layout_height="wrap_content"
+                 android:hint="라이더 등록 취소"
+                 android:layout_gravity="center"
+                 android:padding="10dp"
+                 android:textColor="#ffffff"
+                 android:textColorHint="#ffffff"
+                 android:id="@+id/registerRiderCancel"
+                 android:layout_marginTop="10dp"
+                 android:background="@color/design_default_color_primary"/>
+             <Button
+                 android:layout_width="280dp"
+                 android:layout_height="wrap_content"
+                 android:hint="라이드 기능 설명"
+                 android:layout_gravity="center"
+                 android:padding="10dp"
+                 android:textColor="#ffffff"
+                 android:textColorHint="#ffffff"
+                 android:id="@+id/rideInformation"
+                 android:layout_marginTop="10dp"
+                 android:background="@color/design_default_color_primary"/>
+
+    </LinearLayout>
+    </LinearLayout>
+
+
+</RelativeLayout>
